@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>Automation</groupId>
-    <artifactId>fluent_automation</artifactId>
+    <artifactId>fluent_less_automation</artifactId>
     <version>1.0</version>
     <name>Fluent builder automation</name>
 
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.2.2</version>
+            <version>5.2.3</version>
         </dependency>
 
         <dependency>
@@ -89,13 +89,13 @@
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
-            <version>2.18.1</version>
+            <version>2.19.0</version>
         </dependency>
 
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-rest-assured</artifactId>
-            <version>2.18.1</version>
+            <version>2.19.0</version>
         </dependency>
 
         <dependency>
@@ -142,7 +142,6 @@
                     <source>17</source>
                     <target>17</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
